update for zlib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,10 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -Wall")
 
 set(SOURCE_FILES main.cpp)
 
+add_library(zlib STATIC IMPORTED)
+
+set_target_properties(zlib PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/zlib/libzlibstatic.a)
+
 add_executable(XP3_Decompressor ${SOURCE_FILES})
+
+target_link_libraries(XP3_Decompressor zlib)
